@@ -1,2 +1,2 @@
 d70ba109549c3609026864bfa6f15d43c0294867  misc/iRedAdmin-0.4.3.tar.bz2
-b786a8f8bedfd34a9829c968136848f511a79142  misc/iRedAPD-1.7.0.tar.bz2
+a9e7c12613953dace88147827510a0aca4b5a627  misc/iRedAPD-1.7.0.tar.bz2
